fix css whitespace

--- a/public/style.css
+++ b/public/style.css
@@ -64,50 +64,49 @@ button:hover{
   
 
 body {
-width: 960px;
-margin: 0 auto;
-color: #333;
-font-weight: 300;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serf;
+    width: 960px;
+    margin: 0 auto;
+    color: #333;
+    font-weight: 400;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serf;
 }
   
 h1 {
-  font-size: 3em;
-  font-weight: 300;
+    font-size: 3em;
+    font-weight: 300;
 }
 
 h2 {
-  font-size: 1.5em;
-  font-weight: 300;
+    font-size: 1.5em;
+    font-weight: 300;
 }
 
 section {
-  margin-bottom: 3em;
+    margin-bottom: 3em;
 }
 
 section p {
-  text-align: justify;
+    text-align: justify;
 }
 
 svg {
-  border: 1px solid #ccc;
-  overflow: hidden;
-  margin: 0 auto;
+    overflow: visible;
+    margin: 0 auto;
 }
 
 text {
-  font-weight: 300;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+    font-weight: 300;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
 }
 
 .node rect {
-  stroke: #999;
-  fill: #fff;
-  stroke-width: 1.5px;
+    stroke: #999;
+    fill: #fff;
+    stroke-width: 1.5px;
 }
 
 .edgePath path {
-  stroke: #333;
-  stroke-width: 1.5px;
+    stroke: #333;
+    stroke-width: 1.5px;
 }
